<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_Setting"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edAPI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edAPI_hint"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edLifetimeTile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edLifetimeTile_hint"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/chCoastline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chCoastline" />

            <Button
                android:id="@+id/btnColorCoastline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onColorButton_Click" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/chRiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chRiver" />

            <Button
                android:id="@+id/btnColorRiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onColorButton_Click" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/chRailroad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chRailroad" />

            <Button
                android:id="@+id/btnColorRailroad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onColorButton_Click" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/chRoad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chRoad" />

            <Button
                android:id="@+id/btnColorRoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onColorButton_Click" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:onClick="OnSave_Click"
            android:text="@string/btnSave"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_weight="1"
            android:backgroundTint="#E84848"
            android:onClick="OnCancel_Click"
            android:text="@string/btnCancel"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>