<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Map">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_UpScale"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0"
                android:onClick="ZoomIn"
                android:text="@string/btn_UpScale"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_DownScale"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0"
                android:onClick="ZoomOut"
                android:text="@string/btn_DownScale"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSetting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="OpenSetting"
                android:text="@string/btnSetting" />
        </LinearLayout>

    </LinearLayout>

    <com.example.lab_16_MapAPI.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>